--- a/backend/package.json
+++ b/backend/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/index",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon src/server",
+    "test": "cross-env NODE_ENV=test jest"
   },
   "author": "Daniel Faustino",
   "license": "ISC",
   "dependencies": {
+    "celebrate": "^12.0.1",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.2",
     "express": "^4.17.1",
     "knex": "^0.20.13",
     "sqlite3": "^4.1.1"
@@ -18,6 +20,8 @@
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
+    "jest": "^25.2.3",
+    "supertest": "^4.0.2",
     "eslint-plugin-import": "^2.20.1",
     "nodemon": "^2.0.2"
   }
